--- a/Traktv/Main.storyboard
+++ b/Traktv/Main.storyboard
@@ -71,7 +71,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Lf7-FB-tvQ">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RfY-ea-ThG" customClass="DetailsLayout" customModule="Traktv" customModuleProvider="target">
                                     <size key="itemSize" width="50" height="50"/>
@@ -95,8 +95,8 @@
                         <constraints>
                             <constraint firstItem="Lf7-FB-tvQ" firstAttribute="leading" secondItem="MSN-4H-2d9" secondAttribute="leading" id="PM4-Ql-rnq"/>
                             <constraint firstItem="rIT-am-EcV" firstAttribute="top" secondItem="Lf7-FB-tvQ" secondAttribute="bottom" id="aQ0-Kr-fHX"/>
-                            <constraint firstItem="Lf7-FB-tvQ" firstAttribute="top" secondItem="Sil-su-VAF" secondAttribute="bottom" id="gKO-V9-2L9"/>
                             <constraint firstAttribute="trailing" secondItem="Lf7-FB-tvQ" secondAttribute="trailing" id="jfw-uW-FZZ"/>
+                            <constraint firstItem="Lf7-FB-tvQ" firstAttribute="top" secondItem="MSN-4H-2d9" secondAttribute="top" id="zqI-jw-jOc"/>
                         </constraints>
                     </view>
                     <connections>
@@ -106,6 +106,55 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q92-kf-xZk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="970" y="163"/>
+        </scene>
+        <!--Watchable Home View Controller-->
+        <scene sceneID="qW1-Zv-b2V">
+            <objects>
+                <viewController storyboardIdentifier="home" id="FDe-pg-Sew" customClass="WatchableHomeViewController" customModule="Traktv" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fR9-ka-JBR"/>
+                        <viewControllerLayoutGuide type="bottom" id="ppr-Hw-K5E"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Z55-dZ-X7g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="92a-Zg-peV">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="z6Y-bn-fOf">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="2rJ-Mp-EqO">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="92a-Zg-peV" firstAttribute="top" secondItem="fR9-ka-JBR" secondAttribute="bottom" id="JLy-WT-dQQ"/>
+                            <constraint firstItem="ppr-Hw-K5E" firstAttribute="top" secondItem="92a-Zg-peV" secondAttribute="bottom" id="JPF-tL-g7N"/>
+                            <constraint firstItem="92a-Zg-peV" firstAttribute="leading" secondItem="Z55-dZ-X7g" secondAttribute="leading" id="Ndo-ON-V7T"/>
+                            <constraint firstAttribute="trailing" secondItem="92a-Zg-peV" secondAttribute="trailing" id="TFS-4V-GGw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="92a-Zg-peV" id="55B-lq-yRf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y2f-8t-2Xz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1758" y="163"/>
         </scene>
     </scenes>
 </document>
