- data repository (setup) - Seasons -  Posterables

--- a/Traktv/WatchableTitleItemView.xib
+++ b/Traktv/WatchableTitleItemView.xib
@@ -24,14 +24,23 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEx-FY-Ny4">
-                    <rect key="frame" x="20" y="98" width="335" height="559"/>
+                    <rect key="frame" x="20" y="98" width="335" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXg-j7-eUv">
+                    <rect key="frame" x="20" y="137.5" width="335" height="519.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="KEx-FY-Ny4" secondAttribute="bottom" constant="10" id="AbO-oQ-JhX"/>
+                <constraint firstItem="mXg-j7-eUv" firstAttribute="top" secondItem="KEx-FY-Ny4" secondAttribute="bottom" constant="19" id="9KP-Ui-CYL"/>
+                <constraint firstAttribute="bottom" secondItem="mXg-j7-eUv" secondAttribute="bottom" constant="10" id="Aer-ue-M2n"/>
+                <constraint firstItem="mXg-j7-eUv" firstAttribute="leading" secondItem="KEx-FY-Ny4" secondAttribute="leading" id="KJk-so-5XU"/>
+                <constraint firstItem="mXg-j7-eUv" firstAttribute="trailing" secondItem="KEx-FY-Ny4" secondAttribute="trailing" id="MCb-zF-ZaR"/>
                 <constraint firstItem="eKc-sW-6wN" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="NPW-Rs-dAd"/>
                 <constraint firstItem="KEx-FY-Ny4" firstAttribute="leading" secondItem="eKc-sW-6wN" secondAttribute="leading" id="Zau-FC-cjw"/>
                 <constraint firstItem="eKc-sW-6wN" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="b33-mY-5b1"/>
@@ -40,8 +49,10 @@
             </constraints>
             <connections>
                 <outlet property="img_poster" destination="eKc-sW-6wN" id="dXA-w4-xrT"/>
+                <outlet property="lbl_description" destination="mXg-j7-eUv" id="wuE-Ax-q8n"/>
                 <outlet property="lbl_title" destination="KEx-FY-Ny4" id="3a1-oI-4w4"/>
             </connections>
+            <point key="canvasLocation" x="35.5" y="53.5"/>
         </view>
     </objects>
 </document>
