--- a/Traktv/Main.storyboard
+++ b/Traktv/Main.storyboard
@@ -58,10 +58,10 @@
             </objects>
             <point key="canvasLocation" x="166" y="164"/>
         </scene>
-        <!--Watchable Detail View Controller-->
+        <!--Generic View Controller-->
         <scene sceneID="U4K-cc-2JA">
             <objects>
-                <viewController storyboardIdentifier="watchableDetail" id="S9O-x3-dMq" customClass="WatchableDetailViewController" customModule="Traktv" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="watchableDetail" id="S9O-x3-dMq" customClass="GenericViewController" customModule="Traktv" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Sil-su-VAF"/>
                         <viewControllerLayoutGuide type="bottom" id="rIT-am-EcV"/>
@@ -70,7 +70,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Lf7-FB-tvQ">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Lf7-FB-tvQ">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RfY-ea-ThG" customClass="DetailsLayout" customModule="Traktv" customModuleProvider="target">
@@ -107,29 +107,29 @@
             </objects>
             <point key="canvasLocation" x="970" y="163"/>
         </scene>
-        <!--Watchable Home View Controller-->
-        <scene sceneID="qW1-Zv-b2V">
+        <!--Generic View Controller-->
+        <scene sceneID="EeH-Gt-J6z">
             <objects>
-                <viewController storyboardIdentifier="home" id="FDe-pg-Sew" customClass="WatchableHomeViewController" customModule="Traktv" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="generic" id="ZRl-zh-SYi" customClass="GenericViewController" customModule="Traktv" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="fR9-ka-JBR"/>
-                        <viewControllerLayoutGuide type="bottom" id="ppr-Hw-K5E"/>
+                        <viewControllerLayoutGuide type="top" id="SwM-14-IaN"/>
+                        <viewControllerLayoutGuide type="bottom" id="qdR-E7-Qcs"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Z55-dZ-X7g">
+                    <view key="view" contentMode="scaleToFill" id="ybF-LF-xSq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="92a-Zg-peV">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="D8W-fb-HJz">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="z6Y-bn-fOf">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RLg-mM-6Y3">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="2rJ-Mp-EqO">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9K3-dU-xIm">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -142,19 +142,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="92a-Zg-peV" firstAttribute="top" secondItem="fR9-ka-JBR" secondAttribute="bottom" id="JLy-WT-dQQ"/>
-                            <constraint firstItem="ppr-Hw-K5E" firstAttribute="top" secondItem="92a-Zg-peV" secondAttribute="bottom" id="JPF-tL-g7N"/>
-                            <constraint firstItem="92a-Zg-peV" firstAttribute="leading" secondItem="Z55-dZ-X7g" secondAttribute="leading" id="Ndo-ON-V7T"/>
-                            <constraint firstAttribute="trailing" secondItem="92a-Zg-peV" secondAttribute="trailing" id="TFS-4V-GGw"/>
+                            <constraint firstItem="D8W-fb-HJz" firstAttribute="leading" secondItem="ybF-LF-xSq" secondAttribute="leading" id="EdM-Ur-sYy"/>
+                            <constraint firstItem="qdR-E7-Qcs" firstAttribute="top" secondItem="D8W-fb-HJz" secondAttribute="bottom" id="F7r-zl-rrr"/>
+                            <constraint firstAttribute="trailing" secondItem="D8W-fb-HJz" secondAttribute="trailing" id="lVj-gJ-fBg"/>
+                            <constraint firstItem="D8W-fb-HJz" firstAttribute="top" secondItem="SwM-14-IaN" secondAttribute="bottom" id="tja-5D-NtO"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="92a-Zg-peV" id="55B-lq-yRf"/>
+                        <outlet property="collectionView" destination="D8W-fb-HJz" id="TyN-c4-4fE"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Y2f-8t-2Xz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I9N-4Y-YGS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1758" y="163"/>
+            <point key="canvasLocation" x="1838" y="162"/>
         </scene>
     </scenes>
 </document>
